--- a/api/public/css/style.css
+++ b/api/public/css/style.css
@@ -501,6 +501,10 @@ body {
     border-radius: 50%;
   }
 
+.cycle-dot.completed {
+  background-color: #E0B1E0; 
+}
+
   .logoPomo {
     font-family: "Inspiration";
     font-size: 100px;
@@ -527,6 +531,10 @@ body {
 
   .buttonsPomo button:hover {
     background-color: #ddd;
+  }
+
+  .pular{
+    width: 30px;
   }
 
 /* aqui a landing page */
