ajustes e criação da tela do forum

--- a/api/view/index.ejs
+++ b/api/view/index.ejs
@@ -4,9 +4,10 @@
             <%- include('partials/menuItens') %>
 
                 <div class="conteudo">
-                    <main>
+                    <main class="alinhaIndex">
 
-                        <p class="aaaaaaaaaaa">index principal</p>
+                        <p class="">Bem vindo ao Nixy!!</p>
+                        <div class="logoPomo">Nixy</div>
                     </main>
                 </div>
 
