--- a/api/view/landingPage.ejs
+++ b/api/view/landingPage.ejs
@@ -13,7 +13,7 @@
       </div>
       <div class="botaos">
         <a href="/cadastro"><button type="submit" href="" class="butao1">cadastre-se!</button></a>
-        <a href="/login"><button type="submit" href="/login" class="butao2">login</button></a>
+        <a href="/login"><button type="submit" class="butao2">login</button></a>
       </div>
     </section>
     
@@ -35,7 +35,7 @@
       <img src="/imagens/Icone.png" alt="Ícone de estudo" class="icon">
       <h2>Comece a estudar <br>de graça</h2>
 
-      <button class="LPbtn">Começar agora</button>
+      <button ><a href="/"><button type="submit" class="LPbtn" >Começar agora</button></a></button>
 
     </div>
 
