--- a/api/public/css/style.css
+++ b/api/public/css/style.css
@@ -95,7 +95,7 @@ body {
 .foto-perfil {
     position: relative;
     display: inline-block;
-    width: 120px; /* Ajuste conforme necessário */
+    width: 120px; 
     height: 120px;
     background-color: #D9D9D9;
     object-fit: cover;
@@ -137,6 +137,13 @@ body {
 
 }
 
+.foto-perfil img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+  display: block; /* elimina espaçamento extra */
+}
 
 /* menu itens */
 
@@ -157,6 +164,9 @@ body {
     height: 90px;
     background: #D9D9D9;
     border-radius: 50%;
+        background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     margin: 0 auto;
 }
 
@@ -967,4 +977,117 @@ footer{
     font-style: normal;
     color: #81BBE7;
     font-size: 70px;
+}
+
+.alinhaIndex{
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+    height: 100vh;           
+    text-align: center;     
+    flex-direction: column;  
+
+}
+
+                                /* ------------------a partir daqui o forum------------------------ */
+.AlinhaForum{
+     display: flex;
+  height: 100vh;
+}
+
+.menuLateral{
+     width: 200px;
+  background-color: #f3e8f7;
+  padding: 20px;
+}
+
+.menuLateral h3{
+    margin-top: 0;
+}
+
+.menuLateral ul{
+     list-style: none;
+  padding: 0;
+}
+
+.menuLateral li{
+    margin: 10px 0;
+}
+
+.PrincipalForum{
+  flex: 1;
+  padding: 30px;
+  position: relative;
+}
+
+.barraPesquisa{
+     display: flex;
+  align-items: center;
+  background-color: #d9ddfc;
+  padding: 10px 20px;
+  border-radius: 25px;
+  width: 60%;
+  margin-bottom: 20px;
+}
+
+.barraPesquisa input{
+     border: none;
+  background: transparent;
+  flex: 1;
+  font-size: 16px;
+  color: #666;
+}
+
+.search-icon {
+  margin-left: 10px;
+}
+
+.post {
+  margin-top: 20px;
+}
+
+.forum-info {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  color: #555;
+}
+
+.avatar {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #ddd;
+  margin-right: 8px;
+}
+
+.post h2 {
+ margin: 8px 0;
+  text-align: left;
+  font-size: 20px;
+  display: block;
+  width: 100%;
+ 
+}
+
+.ConteudoPost {
+  margin-top: 2%;
+  background-color: #C8CDEA;
+  padding: 20px;
+  width: 80%;
+  border-radius: 10px;
+}
+
+.add-button {
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+  background-color: #e6a8f7;
+  color: black;
+  font-size: 24px;
+  border: none;
+  border-radius: 15px;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
 }
