--- a/api/view/partials/header.ejs
+++ b/api/view/partials/header.ejs
@@ -25,9 +25,10 @@
                 </div>
 
                 <ul class="menu">
-                    <li><a href="">Home</a></li>
+                    <li><a href="/landingPage">Home</a></li>
                     <li><a href="">Sobre nós</a></li>
                     <li><a href="/">Inicio</a></li>
+                    <li><a href="/Forum">Forúm</a></li>
                 </ul>
             </div>
             
