--- a/api/view/usuario.ejs
+++ b/api/view/usuario.ejs
@@ -20,8 +20,8 @@
         </div>
 
         <ul class="opcoes">
-            <li><a href="/mudar-senha">Mudar senha</a></li>
-            <li><a href="/mudar-email">Mudar Email</a></li>
+            <li><a href="/esqueciAsenha">Mudar senha</a></li>
+            <li><a href="/mudar-email">Mudar Nome</a></li>
             <li><a href="/acessibilidade">Acessibilidade/Contraste</a></li>
         </ul>
     </div>
