--- a/api/public/css/style.css
+++ b/api/public/css/style.css
@@ -292,7 +292,11 @@ body {
     background-color: #c490e4;
     color: white;
   }
-
+.day-content.estudado {
+    background-color: #c490e4;
+    color: white;
+    border-radius: 50%;
+}
 
 
 
@@ -1081,5 +1085,46 @@ footer{
   border-radius: 15px;
   width: 50px;
   height: 50px;
+  cursor: pointer;
+}
+
+.modal {
+  position: fixed;
+  z-index: 1000;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Conteúdo do Modal */
+.modal-content {
+  background-color: #fff;
+  margin: 10% auto;
+  padding: 20px;
+  width: 400px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+.modal-content input,
+.modal-content textarea {
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.modal-content button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.modal-content .close {
+  float: right;
+  font-size: 24px;
   cursor: pointer;
 }
